--- a/DatabaseReplacement/DatabaseReplacement.iOS/DatabaseReplacement.iOS.csproj
+++ b/DatabaseReplacement/DatabaseReplacement.iOS/DatabaseReplacement.iOS.csproj
@@ -25,7 +25,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <MtouchArch>x86_64</MtouchArch>
-    <MtouchLink>None</MtouchLink>
+    <MtouchLink>Full</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
@@ -142,13 +142,25 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Xam.Plugins.DownloadManager">
+      <Version>1.3.6</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
+    <PackageReference Include="ZipStorer">
+      <Version>3.4.0</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\www\" />
+  </ItemGroup>
+  
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\DatabaseReplacement\DatabaseReplacement.projitems" Label="Shared" />
 </Project>
